# lp

./: .env  .gitignore  .gitmodules  404.html  Dockerfile  README.md  asset-manifest.json  community.js  community.json  community.yaml  docker-compose.yml  index.html  overrides.json  overrides.yaml  package-lock.json  package.json  precache-manifest.058ea3852c1b80d54f036c9675249eb2.js  precache-manifest.35552d1e589bdeca7fbbe52154c6997b.js  precache-manifest.3be37e144bad155674f2ebfb50352341.js  precache-manifest.496c93450352436efef3386179880cbe.js  precache-manifest.4cc02eac8c4f050bdf56de833a0794a6.js  precache-manifest.5c16ebc5315587caa488e3992664d1c6.js  precache-manifest.5c63637f5a202a28822dcd72efa60a38.js  precache-manifest.614fbb658a8782634edb88af8cbb2b47.js  precache-manifest.61ab6d2575a7b1db9c34f8a61bb2c39a.js  precache-manifest.8c5f5d048b06db51a354c865124b9e3e.js  precache-manifest.9f305a2718d990624aea3cbe0a6f42a0.js  precache-manifest.ad2ed1beba1e991acd7714a0a770d71c.js  precache-manifest.baff546e094a3140c153b11517196a0c.js  precache-manifest.bbc4b2d3c37d35803cda3c0575e560a9.js  precache-manifest.cad2cf6c839385c68f3f6c5dd5765a04.js  precache-manifest.dc111ac84f649df8f1932f5b54071ab7.js  records.yaml  run  service-worker.js  wrs.json
.github/workflows/: CD.yaml  CI.yaml
backend/: App.cs  Cargo.toml  Dockerfile  LeastPortals.cs  Logger.cs  Player.cs  README.md  ScoreEntry.cs  Statistics.cs  build  docker-start.sh  leastportals.csproj  leastportals.sln  overrides.json  run  stats.json  wrs.json
backend/API/: CacheItem.cs  Map.cs  Overrides.cs  Player.cs  ScoreboardEntry.cs  Statistics.cs
backend/API/Models/: PlayerModel.cs  ProfileModel.cs
backend/Utils/: UlongConverter.cs
backend/src/: main.rs
backend/src/models/: api.rs  database.rs  mod.rs  repository.rs  steam.rs
backend/src/stages/: exporting.rs  fetching.rs  filtering.rs  mod.rs  pre_fetching.rs
docker/: nginx.conf
public/: index.html  manifest.json
rules/: book.toml
rules/src/: SUMMARY.md  changes.md  commands-demo-recording.md  commands-gameplay.md  commands-limitations.md  commands.md  exceptions.md  exploits.md  general.md  proof.md  rules.md
scripts/: api.js  ban.js  cache.js  config.js  models.js  package-lock.json  package.json  steam.js  unban.js  update.js  utils.js
scripts/old/: 2019-09-11.json  2020-04-22.json
scripts/test/: steam.test.js  yaml.test.js
server/: Cargo.toml
server/src/: errors.rs  logger.rs  main.rs  middleware.rs
server/src/models/: log.rs  mod.rs  record.rs  score.rs  steam.rs  user.rs
server/src/routes/: login.rs  logs.rs  mod.rs  records.rs  users.rs
server/src/routes/v1/: api.rs  index.html
src/: Api.js  Api.ts  App.js  App.tsx  AppState.js  AppState.ts  Hooks.ts  app.js  client.js  contextProvider.js  index.js  react-world-flags.d.ts  registerServiceWorker.js  withContext.js  withRoot.js
src/api/: profiles.json  stats.json  wrs.json
src/components/: AppBar.js  AppBar.tsx  ProfileButton.tsx  ProfileDialog.js  ProfileDialog.tsx  ProfileTable.js  RecordChart.js  (+18 more)
test/: update.test.js
(+64 files in other folders)
