[package]
name = "backend"
version = "0.1.0"
authors = ["NeKz <nekzor@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
env_logger = "0.7.1"
job_scheduler = "*"
log = "0.4"
rayon = "1.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
retry = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.4.0"
serde-xml-rs = "0.4.0"
serde_yaml = "0.8"
