[package]
name = "server"
version = "0.2.0"
authors = ["NeKz <nekzor@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5.0"
actix-files = "0.4.0"
actix-http = "2.1.0"
actix-identity = "0.3.1"
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-utils = "2.0.0"
actix-web = { version = "3.0", features = ["openssl"] }
actix-web-middleware-redirect-scheme = "3.0"
bitflags = "1.2.1"
bson = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4"
futures = "0.3"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
openssl = { version = "0.10" }
rand = "0.8.0"
reqwest = {  version = "0.10.10", features = ["blocking"] }
serde = "1.0.118"
serde_json = "1.0.60"
serde_repr = "0.1.6"
serde_yaml = "0.8.14"
steam-auth = { version = "1.0.0" }
validator = { version = "0.12.0", features = ["derive"] }
