[package]
name = "server"
version = "0.1.0"
authors = ["NeKz <nekzor@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5.0"
actix-files = "0.4.0"
actix-http = "2.1.0"
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-utils = "2.0.0"
actix-web = { version = "3.0", features = ["openssl"] }
chrono = "0.4"
clap = { version = "4.3.12", features = ["derive"] }
env_logger = "0.7.1"
log = "0.4"
openssl = { version="0.10" }
